<resources>
    <string name="app_name">SIMPEL Admin</string>

    <string name="pilih_status">Pilih Status</string>

    <string-array name="status_options">
        <item>Status</item>
        <item>DROP</item>
        <item>SURVEY</item>
        <item>DONE SURVEY</item>
        <item>MAT DEL</item>
        <item>MOS</item>
        <item>DONE</item>
        <item>POWER ON</item>
        <item>INTEGRASI</item>
        <item>OA</item>
        <item>DONE UT</item>
    </string-array>

    <string name="pilih_size_olt">Pilih Size OLT</string>

    <string-array name="size_olt_options">
        <item>Size</item>
        <item>Big XGSPON</item>
        <item>MINI XGSPON</item>
        <item>INSERT CARD</item>
    </string-array>

    <string name="apps_name">BASurveyBig</string>
    <string-array name="executor_options">
        <item>PT. ZTE INDONESIA</item>
        <item>PT Huawei Tech Investment</item>
    </string-array>

    <string name="back">Back</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="nik">NIK</string>
    <string name="enter_your_nik">Enter your NIK</string>
    <string name="company_name">Company Name</string>
    <string name="enter_your_company_name">Enter your company name</string>
    <string name="unit">Unit</string>
    <string name="enter_your_unit">Enter your unit</string>
    <string name="position">Position</string>
    <string name="enter_your_position">Enter your position</string>
    <string name="detail_info">Detail Info</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="save_button">Save</string>
</resources>